eks/namespace.yaml
# EKS Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: blog
  labels:
    name: blog
    environment: production
    platform: eks
